# camera1

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gpf/camera1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LogUtil.h  native-lib.cpp  native-lib.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/gpf/camera1/: ActivityHelper.kt  AnyHelper.kt  MainActivity.kt  RTMPClient.kt  YUVUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/gpf/camera1/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
